--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:server": "ts-node server"
+    "build:server": "tsc -p server",
+    "start:server": "ts-node server",
+    "clean:server": "rm -rf server/**/*.js",
+    "heroku-postbuild": "npm run build && npm run build:server"
   },
   "eslintConfig": {
     "extends": [
