--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.33.2",
     "react-scripts": "4.0.3",
+    "ts-jest": "^26.5.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
@@ -34,6 +35,7 @@
     "eject": "react-scripts eject",
     "build:server": "tsc -p server",
     "start:server": "ts-node server",
+    "test:server": "jest server-tests --config server-tests/jest.config.js",
     "clean:server": "rm -rf server/**/*.js",
     "heroku-postbuild": "npm run build && npm run build:server"
   },
