--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/connect-history-api-fallback": "^1.3.5",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "connect-history-api-fallback": "^1.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.33.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.4.0",
