--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/connect-history-api-fallback": "^1.3.5",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
@@ -19,6 +20,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "connect-history-api-fallback": "^1.6.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
