--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "encrypt-cookie": "^1.1.5",
     "express": "^4.17.1",
+    "loglevel": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.33.2",
