--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "msw": "^0.36.0"
+  }
 }
