--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,7 +1,7 @@
-name: run-unit-tests
+name: ci
 on: push
 jobs:
-  run-unit-tests-job:
+  run-unit-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,3 +19,13 @@ jobs:
           ENCRYPT_COOKIE_PASSWORD: ${{ secrets.ENCRYPT_COOKIE_PASSWORD }}
           GITHUB_TOKEN_VALID: ${{ secrets.TOKEN_VALID }}
           GITHUB_TOKEN_REVOKED: ${{ secrets.TOKEN_REVOKED }}
+  deploy-to-heroku:
+    needs: run-unit-tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
