--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "repo-traffic-react",
-  "name": "Repo Traffic React",
+  "name": "Repo Traffic",
   "icons": [
     {
       "src": "favicon.ico",
