--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/connect-history-api-fallback": "^1.3.5",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/gtag.js": "0.0.8",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.35",
