--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^10.0.0",
     "encrypt-cookie": "^1.1.5",
     "express": "^4.17.1",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "loglevel": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
