--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "eject": "react-scripts eject",
     "build:server": "tsc -p server",
     "start:server": "ts-node server",
-    "test:server": "npm run build:server && jest server-tests --config server-tests/jest.config.js",
-    "heroku-postbuild": "npm run build && npm run build:server"
+    "test:server": "npm run build:server && jest server-tests --config server-tests/jest.config.js"
   },
   "eslintConfig": {
     "extends": [
