--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,20 @@
-name: ci
+name: CI/CD
 on: push
+
 jobs:
   run-unit-tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "16"
-      - run: npm clean-install
-      - name: "Run client unit tests"
+          node-version: "18"
+      - name: Clean install
+        run: npm clean-install
+      - name: Run client unit tests
         run: npm test
-      - name: "Run server unit tests"
+      - name: Run server unit tests
         run: npm run test:server
         env:
           GITHUB_CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -19,9 +22,11 @@ jobs:
           ENCRYPT_COOKIE_PASSWORD: ${{ secrets.ENCRYPT_COOKIE_PASSWORD }}
           GITHUB_TOKEN_VALID: ${{ secrets.TOKEN_VALID }}
           GITHUB_TOKEN_REVOKED: ${{ secrets.TOKEN_REVOKED }}
+
   deploy:
+    name: Deploy to gh-pages
+    if: github.ref_type == 'tag'
     needs: run-unit-tests
-    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
