--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           GITHUB_TOKEN_REVOKED: ${{ secrets.TOKEN_REVOKED }}
 
   deploy:
-    name: Deploy to gh-pages
+    name: Deploy to Render
     if: github.ref_type == 'tag'
     needs: run-unit-tests
     runs-on: ubuntu-latest
